Nick had an error and fixed it.

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,14 @@ android {
 dependencies {
 	compile files('libs/NinaCore.jar')
 }
+
+
+buildscript {
+    repositories {
+        jcenter() // or mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+    }
+}
