--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 /.idea/libraries
 .DS_Store
 /build
+
+.idea/gradle.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/modules.xml
+
+NuancedCooking.iml
+
+NinaCoreSampleApp.iml
